<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Intentions</string>
    <string name="Autor">Autor Karol Kowalski</string>
    <string name="Description">Intentions v 1.00 </string>
    <string name="Coffe">Coffe Order</string>
    <string name="Match">Play match</string>
    <string name="name">Name</string>
    <string name="toppings">Ingredients</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">2</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--
     Whipped cream topping for the order summary. It will be shown in the format of
     "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_whipped_cream">Add Whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <!--
     Chocolate topping for the order summary. It will be shown in the format of
     "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>
    <!--
     Subject line for the order summary email. It will be in the format of
     "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_email_subject">Just java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="back">Back</string>
</resources>
