<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.intencje.MainActivity">

    <TextView
        android:text="@string/Autor"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        style="@style/HeaderTextStyle" />
    <TextView
        android:text="@string/Description"
        android:layout_centerInParent="true"
        style="@style/CustomText" />
    <Button
        android:text="@string/Coffe"
        android:onClick="coffeeOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>
    <Button
        android:text="@string/Match"
        android:onClick="playMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
